--- a/src/css/EducationSkills.css
+++ b/src/css/EducationSkills.css
@@ -29,6 +29,7 @@
 .esLeft {
     width: 50%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -91,7 +92,7 @@
     border: solid 2px #79bfeb;
     width: 90px;
     height: 90px;
-    border-radius: 3em;
+    border-radius: 100%;
 }
 
 .pursuitIcon:hover {
@@ -118,6 +119,11 @@
 }
 
 @media (max-width: 464px) {
+    .esContainer {
+        width: 100%;
+        height: fit-content;
+    }
+
     .esPage {
         transform: none;
         height: fit-content;
@@ -130,12 +136,19 @@
 
     .esContext {
         display: flex;
-        width: 100%;
         flex-direction: column;
         transform: none;
     }
 
     .esLeft {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .esRight {
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -167,112 +180,11 @@
         font-size: 1.2rem;
     }
 
-    .iconRow {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
+    .skillsIcons:hover {
+        transform: none;
     }
-    /* .esContainer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        height: fit-content;
+   
+    .skillTitle {
+        font-size: 20px;
     }
-
-    .esTitle {
-        margin-top: 1em;
-        width: 90vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-    }
-
-    .esContext {
-        display: flex;
-        flex-direction: column;
-        width: 90vw;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-
-    .esLeft {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        width: 90vw;
-        height: fit-content;
-    }
-
-    .esRight {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        width: 90vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-        width: 100%;
-    }
-
-    .esPursuit {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 90vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-    }
-
-    .esBaruch {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 90vw;
-        height: fit-content;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        border-radius: 5px;
-        opacity: 0.85;
-        cursor: default;
-        padding: 1.5em;
-        margin-bottom: 1em;
-    }
-
-    .iconRow{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: 20vh;
-        justify-content: space-evenly;
-    }
-
-    .skillsIcons {
-        width: 125px;
-        height: auto;
-        margin-bottom: 1.3em;
-        pointer-events: none;
-    }
-
-    .hideTitle {
-        display: block;
-    } */
 }
